--- a/history/history2.html
+++ b/history/history2.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Благие дела</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Лейсан и её сын Тамерлан</title>
     <link rel="stylesheet" href="../style/normalize.css">
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -31,25 +32,25 @@
             <ul class="breadscrumbs">
                 <li><a class="active" href="../our-history.html">Истории людей</a></li>
                 <li>&gt;</li>
-                <li>Лейсан и её сын Тимерлан</li>
+                <li>Лейсан и её сын Тамерлан</li>
             </ul>
         </div>
         <a href="../index.html" class="top-right-link"></a>
         <div class="contact">
-            <span class="contact-title">История Лейсан и её 4-ёх летнего сына Тимерлана</span>
+            <span class="contact-title">История Лейсан и её 4-ёх летнего сына Тамерлана</span>
             <div class="history-item-img-left clearfix">
-                <img src="../img/history-more-siraeva1.jpg" alt="Истории подопечных фонда: Лейсан и Тимерлан" width="300" height="300">
+                <img src="../img/history-more-siraeva1.jpg" alt="Истории подопечных фонда: Лейсан и Тамерлан" width="300" height="300">
                 <p>Лейсан родом из Альметьевска и с детства страдает различными заболеваниями. Она рано лишилась матери и росла в интернате – мачеха не захотела воспитывать чужую дочь, к тому же инвалида, а отец не смог противостоять новой жене. Лейсан попала в интернат в возрасте 7-ми лет. Достигнув совершеннолетия, девушка уехала в Казань и выучилась на пищевого технолога. После она отказалась от инвалидности, хотя тот список диагнозов, который ей ежегодно подтверждали доктора, и который, к сожалению, с возрастом пополнялся новыми болезнями, позволял ей официальность оформить инвалидность. Но Лейсан не желала жить на содержании государства, захотела работать и жить полноценной жизнью, насколько это возможно. Было трудно, но трудности только добавляли сил этой девушке.</p>
-                <p>В 2012 году Лейсан родила сына Тимура. Решение родить и воспитывать ребенка Лейсан приняла самостоятельно, будучи не замужем. К тому моменту она уже смогла заработать на квартиру в ипотеку, отказывая себе во всём. Питалась макаронами и картошкой. Иногда не было денег даже на хлеб и молоко. Об овощах и фруктах и речи быть не могло. Но это не изменило её решение стать матерью. И Лейсан оформила кредит на то, чтобы сделать ЭКО. Всё получилось с первого раза, и в июле 2012 года Лейсан родила сына.</p>
+                <p>В 2012 году Лейсан родила сына Тамерлана. Решение родить и воспитывать ребенка Лейсан приняла самостоятельно, будучи не замужем. К тому моменту она уже смогла заработать на квартиру в ипотеку, отказывая себе во всём. Питалась макаронами и картошкой. Иногда не было денег даже на хлеб и молоко. Об овощах и фруктах и речи быть не могло. Но это не изменило её решение стать матерью. И Лейсан оформила кредит на то, чтобы сделать ЭКО. Всё получилось с первого раза, и в июле 2012 года Лейсан родила сына.</p>
             </div>
             <div class="history-item-img-right clearfix">
-                <img src="../img/history-more-siraeva2.jpg" alt="Истории подопечных фонда: Лейсан и Тимерлан" width="300" height="300">
+                <img src="../img/history-more-siraeva2.jpg" alt="Истории подопечных фонда: Лейсан и Тамерлан" width="300" height="300">
                 <p>Уже при рождении у мальчика был обнаружен ряд заболеваний, таких как Физиологическая желтуха, ДМПП, ОАП, ЭТЛЖ. Это не остановила Лейсан. Знакомые уговаривали её оставить ребёнка в детском доме, но девушка о таком даже слышать не хотела. Ей и в голову не приходило, что можно бросить родное дитя, которого она так долго ждала и желала.</p>
-                <p>С этого момента жизнь Лейсан стала похожа на гонку на выживание. Забыв о своих болезнях, она всю себя посвятила сыну. Не сдавалась даже тогда, когда ежемесячного к списку заболеваний Тимура добавлялся очередной серьезный недуг. Не сдается она и сейчас.</p>
+                <p>С этого момента жизнь Лейсан стала похожа на гонку на выживание. Забыв о своих болезнях, она всю себя посвятила сыну. Не сдавалась даже тогда, когда ежемесячного к списку заболеваний Тамерлана добавлялся очередной серьезный недуг. Не сдается она и сейчас.</p>
                 <p>Решение помочь именно Лейсан не случайно. Благотворительный фонд «Благие дела» занимается профилактикой социального сиротства. Ежедневно наши специалисты сталкиваются с тем, как здоровые матери, у которых есть силы и потенциал, отказываются от своих детей, сталкиваясь с финансовыми трудностями и другими жизненными перипетиями. Регулярно наши психологи работают с матерями, которые оставляют в роддоме совершенно здоровых детей.</p>
             </div>
             <div class="history-item-img-left clearfix">
-                <img src="../img/history-more-siraeva3.jpg" alt="Истории подопечных фонда: Тимерлан" width="300" height="255">
+                <img src="../img/history-more-siraeva3.jpg" alt="Истории подопечных фонда: Тамерлан" width="300" height="255">
                 <p>А Лейсан не сдается несмотря ни на что. Ей постоянно требуются средства на приобретение поддерживающих медикаментов, она отказывает себе во всем, экономит на лекарствах себе, чтобы обеспечить нормальное питание ребёнку и приобретать необходимые медикаменты, поддерживающие ему жизнь.</p>
                 <p>При этом Лейсан выплачивает ипотеку и кредит за ЭКО, работая день и ночь. Как ей это удается, остается для нас загадкой. Мужество Лейсан, её жажда к жизни и безграничная любовь к своему ребёнку восхищают. Поэтому мы приняли решение поддержать её и помочь ей вести эту трудную, но такую важную борьбу за жизнь. Мы хотим, чтобы её случай стал примером для тех, кто, пасуя перед трудностями, собирается совершить самую роковую ошибку в жизни – отдать своего ребёнка в детдом.</p>
             </div>
@@ -75,7 +76,7 @@
                 <li>Диабет 2 типа,</li>
                 <li>Фокальная височная эпилепсия-судорожный синдром</li>
             </ul>
-            <p><b>Сираев Тимерлан Ильфатович. 04.07.2012</b></p>
+            <p><b>Сираев Тамерлан Ильфатович. 04.07.2012</b></p>
             <ul>
                 <li>Резидуально-органическое поражение головного мозга в форме гипертензионно-гидроцефального синдрома, миатонического синдрома,</li>
                 <li>Задержки речевого развития</li>
@@ -114,7 +115,7 @@
                     <br>КОР/СЧЕТ 30101810500000000703, БИК 049205703
                 </div>
             </div>
-            <p><b>Назначение платежа "благотворительная помощь Тимерлану".
+            <p><b>Назначение платежа "благотворительная помощь Тамерлану".
 НДС не облагается.
 </b></p>
 
@@ -131,15 +132,12 @@
                     </svg>
                 </a>
                 <a class="fb" href="https://www.facebook.com/%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D1%82%D0%B2%D0%BE%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%A4%D0%BE%D0%BD%D0%B4-%D0%91%D0%BB%D0%B0%D0%B3%D0%B8%D0%B5-%D0%B4%D0%B5%D0%BB%D0%B0-499031533612417/?ref=bookmarks">
-                    <!--                    <?xml version="1.0" ?>-->
-                    <!--                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>-->
                     <svg enable-background="new 0 0 48 48" id="Layer_1" version="1.1" viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <circle cx="24" cy="24" fill="#4E71A8" r="24" />
                         <path d="M29.9,19.5h-4v-2.6c0-1,0.7-1.2,1.1-1.2c0.5,0,2.8,0,2.8,0v-4.4l-3.9,0c-4.4,0-5.3,3.3-5.3,5.3v2.9h-2.5V24  h2.5c0,5.8,0,12.7,0,12.7h5.3c0,0,0-7,0-12.7h3.6L29.9,19.5z" fill="#FFFFFF" />
                     </svg>
                 </a>
                 <a class="instagram" href="https://www.instagram.com/blagiedela/">
-                    <!--                    <?xml version="1.0" ?>-->
                     <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Flat_copy">
                             <g>
