--- a/our-history.html
+++ b/our-history.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Истории людей обратившихся за помощью в фонд Благие дела</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
@@ -40,16 +41,16 @@
                 <a href="history/history1.html" class="action-item-more">Подробнее</a>
             </div>
             <div class="history-item-img-left clearfix">
-                <span class="actions-item-title">Лейсан Сираева и её 4-ёх летний сын Тимерлан</span>
-                <a href="history/history2.html" title="Узнать подробнее"><img src="img/history-main-siraeva.jpg" alt="Истории подопечных фонда: Гуля" width="300" height="300"></a>
+                <span class="actions-item-title">Лейсан Сираева и её 4-ёх летний сын Тамерлан</span>
+                <a href="history/history2.html" title="Узнать подробнее"><img src="img/history-main-siraeva.jpg" alt="Истории подопечных фонда: Лейсан и Тамерлан" width="300" height="300"></a>
                 <p><b>Подопечная Фонда с 10 октября 2016 года</b></p>
                 <p>Лейсан родом из Альметьевска и с детства страдает различными заболеваниями. Она рано лишилась матери и росла в интернате – мачеха не захотела воспитывать чужую дочь, к тому же инвалида, а отец не смог противостоять новой жене. Лейсан попала в интернат в возрасте 7-ми лет. Достигнув совершеннолетия, девушка уехала в Казань и выучилась на пищевого технолога…</p>
-                <p>..В 2012 году Лейсан родила сына Тимура. Решение родить и воспитывать ребенка Лейсан приняла самостоятельно, будучи не замужем. К тому моменту она уже смогла заработать на квартиру в ипотеку, отказывая себе во всём. Питалась макаронами и картошкой. Иногда не было денег даже на хлеб и молоко. Об овощах и фруктах и речи быть не могло. Но это не изменило её решение стать матерью. И Лейсан оформила кредит на то, чтобы сделать ЭКО…</p>
+                <p>..В 2012 году Лейсан родила сына Тамерлана. Решение родить и воспитывать ребенка Лейсан приняла самостоятельно, будучи не замужем. К тому моменту она уже смогла заработать на квартиру в ипотеку, отказывая себе во всём. Питалась макаронами и картошкой. Иногда не было денег даже на хлеб и молоко. Об овощах и фруктах и речи быть не могло. Но это не изменило её решение стать матерью. И Лейсан оформила кредит на то, чтобы сделать ЭКО…</p>
                 <a href="history/history2.html" class="action-item-more">Подробнее</a>
             </div>
             <div class="history-item-img-right clearfix">
                 <span class="actions-item-title">Наталья Трайстарь и её четверо детей</span>
-                <a href="history/history3.html" title="Узнать подробнее"><img src="img/history-main-traistar.jpg" alt="Истории подопечных фонда: Гуля" width="300" height="278"></a>
+                <a href="history/history3.html" title="Узнать подробнее"><img src="img/history-main-traistar.jpg" alt="Истории подопечных фонда: Наталья и ее четверо детей" width="300" height="278"></a>
                 <p><b>Подопечная Фонда с 8 марта 2016 года</b></p>
                 <p>Наталья пришла в Фонд в марте 2016 года в полном отчаянье. Так вышло, что их отец оказался в местах лишения свободы, оставив Наталью и четверых детей – Максима, Стаса, Ангелину и Матвея – без средств к существованию. Ситуация была сложная. Не в порядке были документы и самой Мамы и детей. Наташу готовили к депортации, а детей к изъятию. Был март 2016 года. Морозы. В отчаянье она пришла к нам совершенно разбитая горем…</p>
                 <a href="history/history3.html" class="action-item-more">Подробнее</a>
