--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Благие дела</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Благие дела О нас</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -55,7 +56,7 @@
                 <div class="photo">
                     <img src="img/nailja.jpg" width="200" height="200" alt="Халитова Наиля Ильшатовна" title="Халитова Наиля Ильшатовна">
                 </div>
-                <span>Халитова Наиля Ильшатовна</span>
+                <span>Халитова Наиля Иршатовна</span>
                 <span>Руководитель программы укрепления семьи</span>
                 <br>
                 <span>Тел.: +7 (937) 575-75-76</span>
@@ -68,7 +69,8 @@
             <p>Женщин с детьми, оставшихся без крова и средств к существованию, мы заселяем в антикризисные квартиры, которые арендуем на средства Фонда. В течение трех месяцев, пока проходит период социальной адаптации (многие приходят с тяжелыми психологическими травмами, и им сложно сразу вернуться в общество), мы устраиваем подопечных на работу, работаем над тем, чтобы у них проснулось желание саморазвития, и, как правило, женщины начинают зарабатывать и через какое-то время начинают самостоятельную жизнь. Но такую помощь Фонд оказывает только одиноким матерям. Если у обратившихся к нам есть близкие, которые способны поддержать их в трудных ситуациях, но в силу обстоятельств люди не общаются, находятся в ссоре, то таких подопечных мы обычно возвращаем в семьи.</p>
             <p>Кроме того, наши психологи и волонтеры проводят воспитательную работу с молодыми матерями, которые отказываются от своих детей в роддомах. Беседы с психологами направлены на то, чтобы женщины изменили свое решение, и маленький гражданин шел по жизни, опираясь на заботливое материнское плечо, имел возможность почувствовать теплоту и нежность маминых рук.</p>
             <h2 class="about-title">Наша статистика:</h2>
-            <ul class="about-list">За год работы нашего фонда мы уже достигли немалых результатов:
+            <p>За год работы нашего фонда мы уже достигли немалых результатов:</p>
+            <ul class="about-list">
                 <li>Нам удалось сохранить «жизнь» 22 семьям. </li>
                 <li>8 молодых матерей решили не отказываться от своих новорожденных детей.</li>
                 <li>Более 15 многодетных женщин, оказавшихся в трудных жизненных ситуациях, обрели новый дом и возможность заработка.</li>
@@ -86,8 +88,6 @@
             <p class="about-slogan">Когда мы перестаем бороться друг за друга, мы теряем то, что делает нас людьми!</p>
             <div class="social-btn">
                 <a class="vk" href="https://vk.com/blagiyedela">
-                    <!--                    <?xml version="1.0" ?>-->
-                    <!--                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>-->
                     <svg id="Capa_1" style="enable-background:new 0 0 112.196 112.196;" version="1.1" viewBox="0 0 112.196 112.196" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
                             <g>
@@ -98,23 +98,20 @@
                     </svg>
                 </a>
                 <a class="fb" href="https://www.facebook.com/%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D1%82%D0%B2%D0%BE%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%A4%D0%BE%D0%BD%D0%B4-%D0%91%D0%BB%D0%B0%D0%B3%D0%B8%D0%B5-%D0%B4%D0%B5%D0%BB%D0%B0-499031533612417/?ref=bookmarks">
-                    <?xml version="1.0" ?>
-                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-                        <svg enable-background="new 0 0 48 48" id="Layer_1" version="1.1" viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <circle cx="24" cy="24" fill="#4E71A8" r="24" />
-                            <path d="M29.9,19.5h-4v-2.6c0-1,0.7-1.2,1.1-1.2c0.5,0,2.8,0,2.8,0v-4.4l-3.9,0c-4.4,0-5.3,3.3-5.3,5.3v2.9h-2.5V24  h2.5c0,5.8,0,12.7,0,12.7h5.3c0,0,0-7,0-12.7h3.6L29.9,19.5z" fill="#FFFFFF" />
-                        </svg>
+                    <svg enable-background="new 0 0 48 48" id="Layer_1" version="1.1" viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <circle cx="24" cy="24" fill="#4E71A8" r="24" />
+                        <path d="M29.9,19.5h-4v-2.6c0-1,0.7-1.2,1.1-1.2c0.5,0,2.8,0,2.8,0v-4.4l-3.9,0c-4.4,0-5.3,3.3-5.3,5.3v2.9h-2.5V24  h2.5c0,5.8,0,12.7,0,12.7h5.3c0,0,0-7,0-12.7h3.6L29.9,19.5z" fill="#FFFFFF" />
+                    </svg>
                 </a>
                 <a class="instagram" href="https://www.instagram.com/blagiedela/">
-                    <?xml version="1.0" ?>
-                        <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Flat_copy">
-                                <g>
-                                    <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" fill="#333333" />
-                                </g>
-                                <path d="M22.057,7.93H9.943c-1.14,0-2.019,0.879-2.019,2.019v12.113c0,1.14,0.879,2.019,2.019,2.019h12.113   c1.14,0,2.019-0.879,2.019-2.019V9.949C24.076,8.808,23.196,7.93,22.057,7.93z M16.012,12.833c1.791,0,3.243,1.407,3.243,3.142   c0,1.735-1.452,3.142-3.243,3.142c-1.79,0-3.242-1.408-3.242-3.142C12.77,14.239,14.222,12.833,16.012,12.833z M22.057,21.557   c0,0.354-0.151,0.505-0.505,0.505H10.448c-0.353,0-0.505-0.151-0.505-0.505v-7.066l1.258,0.274   c-0.135,0.439-0.208,0.903-0.208,1.385c0,2.684,2.248,4.863,5.018,4.863c2.772,0,5.019-2.178,5.019-4.863   c0-0.482-0.073-0.946-0.208-1.385l1.234-0.274V21.557z M22.057,12.472c0,0.279-0.226,0.505-0.505,0.505h-2.019   c-0.279,0-0.505-0.226-0.505-0.505v-2.019c0-0.279,0.226-0.505,0.505-0.505h2.019c0.279,0,0.505,0.226,0.505,0.505V12.472z" fill="#FFFFFF" />
+                    <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Flat_copy">
+                            <g>
+                                <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" fill="#333333" />
                             </g>
-                        </svg>
+                            <path d="M22.057,7.93H9.943c-1.14,0-2.019,0.879-2.019,2.019v12.113c0,1.14,0.879,2.019,2.019,2.019h12.113   c1.14,0,2.019-0.879,2.019-2.019V9.949C24.076,8.808,23.196,7.93,22.057,7.93z M16.012,12.833c1.791,0,3.243,1.407,3.243,3.142   c0,1.735-1.452,3.142-3.243,3.142c-1.79,0-3.242-1.408-3.242-3.142C12.77,14.239,14.222,12.833,16.012,12.833z M22.057,21.557   c0,0.354-0.151,0.505-0.505,0.505H10.448c-0.353,0-0.505-0.151-0.505-0.505v-7.066l1.258,0.274   c-0.135,0.439-0.208,0.903-0.208,1.385c0,2.684,2.248,4.863,5.018,4.863c2.772,0,5.019-2.178,5.019-4.863   c0-0.482-0.073-0.946-0.208-1.385l1.234-0.274V21.557z M22.057,12.472c0,0.279-0.226,0.505-0.505,0.505h-2.019   c-0.279,0-0.505-0.226-0.505-0.505v-2.019c0-0.279,0.226-0.505,0.505-0.505h2.019c0.279,0,0.505,0.226,0.505,0.505V12.472z" fill="#FFFFFF" />
+                        </g>
+                    </svg>
                 </a>
             </div>
             <span class="copyright-text">Copyright &#169; 2016. Все права защищены</span>
