--- a/history/history3.html
+++ b/history/history3.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Благие дела</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Наталья и её четверо детей</title>
     <link rel="stylesheet" href="../style/normalize.css">
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -86,15 +87,12 @@
                     </svg>
                 </a>
                 <a class="fb" href="https://www.facebook.com/%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D1%82%D0%B2%D0%BE%D1%80%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%A4%D0%BE%D0%BD%D0%B4-%D0%91%D0%BB%D0%B0%D0%B3%D0%B8%D0%B5-%D0%B4%D0%B5%D0%BB%D0%B0-499031533612417/?ref=bookmarks">
-                    <!--                    <?xml version="1.0" ?>-->
-                    <!--                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>-->
                     <svg enable-background="new 0 0 48 48" id="Layer_1" version="1.1" viewBox="0 0 48 48" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <circle cx="24" cy="24" fill="#4E71A8" r="24" />
                         <path d="M29.9,19.5h-4v-2.6c0-1,0.7-1.2,1.1-1.2c0.5,0,2.8,0,2.8,0v-4.4l-3.9,0c-4.4,0-5.3,3.3-5.3,5.3v2.9h-2.5V24  h2.5c0,5.8,0,12.7,0,12.7h5.3c0,0,0-7,0-12.7h3.6L29.9,19.5z" fill="#FFFFFF" />
                     </svg>
                 </a>
                 <a class="instagram" href="https://www.instagram.com/blagiedela/">
-                    <!--                    <?xml version="1.0" ?>-->
                     <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Flat_copy">
                             <g>
