--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Пресса<br> о нас</a></li>
                 <li><a href="actions.html">Проекты<br>и акции</a></li>
-                <li><a href="#">Наши<br>друзья</a></li>
+                <li><a href="our-friends.html">Наши<br>друзья</a></li>
                 <li><a href="our-history.html">Истории<br>&nbsp;людей</a></li>
                 <li><a class="active" href="#">Контакты</a></li>
                 <li onmouseover="showElem('document-submenu')" onmouseout="hiddenElem('document-submenu')"><a href="#">Документы</a>
